[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "0.3.1"
hdk = "0.2.1"
holochain_integrity_types = "=0.2.2"
serde = "1"

[workspace.dependencies.coordinator]
path = "dnas/whosin/zomes/coordinator/coordinator"

[workspace.dependencies.coordinator_integrity]
path = "dnas/whosin/zomes/integrity/coordinator"

[workspace.dependencies.profiles]
path = "dnas/whosin/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/whosin/zomes/integrity/profiles"
