[package]
name = "notifications_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "notifications_integrity"

[dependencies]
hdi = { workspace = true }

serde = { workspace = true }

hc_zome_notifications_integrity = { git = "https://github.com/LeosPrograms/holochain-notifications", branch = "develop" }
